@@ -1,3 +1,4 @@
-THIS IS A DIALOGUE SAMPLE SAMPLE TEXT MEMES LMAO
-_
-_
+THIS IS A DIALOGUE SAMPLE
+SAMPLE TEXT
+MEEMS LMAO
+END
